--- a/classes/_lib_d4c_.previoustaskerror.html
+++ b/classes/_lib_d4c_.previoustaskerror.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PreviousError | d4c-queue</title>
+	<title>PreviousTaskError | d4c-queue</title>
 	<meta name="description" content="Documentation for d4c-queue">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/_lib_d4c_.html">&quot;lib/D4C&quot;</a>
 				</li>
 				<li>
-					<a href="_lib_d4c_.previouserror.html">PreviousError</a>
+					<a href="_lib_d4c_.previoustaskerror.html">PreviousTaskError</a>
 				</li>
 			</ul>
-			<h1>Class PreviousError</h1>
+			<h1>Class PreviousTaskError</h1>
 		</div>
 	</div>
 </header>
@@ -71,10 +71,10 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="_lib_d4c_.previouserror.html#error" class="tsd-signature-type">Error</a>
+						<a href="_lib_d4c_.previoustaskerror.html#error" class="tsd-signature-type">Error</a>
 						<ul class="tsd-hierarchy">
 							<li>
-								<span class="target">PreviousError</span>
+								<span class="target">PreviousTaskError</span>
 							</li>
 						</ul>
 					</li>
@@ -87,16 +87,16 @@
 						<section class="tsd-index-section ">
 							<h3>Constructors</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="_lib_d4c_.previouserror.html#constructor" class="tsd-kind-icon">constructor</a></li>
+								<li class="tsd-kind-constructor tsd-parent-kind-class"><a href="_lib_d4c_.previoustaskerror.html#constructor" class="tsd-kind-icon">constructor</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previouserror.html#message" class="tsd-kind-icon">message</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previouserror.html#name" class="tsd-kind-icon">name</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previouserror.html#stack" class="tsd-kind-icon">stack</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_lib_d4c_.previouserror.html#error" class="tsd-kind-icon">Error</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previoustaskerror.html#message" class="tsd-kind-icon">message</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previoustaskerror.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a href="_lib_d4c_.previoustaskerror.html#stack" class="tsd-kind-icon">stack</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><a href="_lib_d4c_.previoustaskerror.html#error" class="tsd-kind-icon">Error</a></li>
 							</ul>
 						</section>
 					</div>
@@ -108,13 +108,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Previous<wbr>Error<span class="tsd-signature-symbol">(</span>message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_lib_d4c_.previouserror.html" class="tsd-signature-type">PreviousError</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Previous<wbr>Task<wbr>Error<span class="tsd-signature-symbol">(</span>message<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_lib_d4c_.previoustaskerror.html" class="tsd-signature-type">PreviousTaskError</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/5ec1dd9/src/lib/D4C.ts#L44">src/lib/D4C.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L44">src/lib/D4C.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -123,7 +123,7 @@
 									<h5>message: <span class="tsd-signature-type">any</span></h5>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="_lib_d4c_.previouserror.html" class="tsd-signature-type">PreviousError</a></h4>
+							<h4 class="tsd-returns-title">Returns <a href="_lib_d4c_.previoustaskerror.html" class="tsd-signature-type">PreviousTaskError</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -135,7 +135,7 @@
 					<h3>message</h3>
 					<div class="tsd-signature tsd-kind-icon">message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="_lib_d4c_.previouserror.html">PreviousError</a>.<a href="_lib_d4c_.previouserror.html#message">message</a></p>
+						<p>Inherited from <a href="_lib_d4c_.previoustaskerror.html">PreviousTaskError</a>.<a href="_lib_d4c_.previoustaskerror.html#message">message</a></p>
 						<ul>
 							<li>Defined in node_modules/typescript/lib/lib.es5.d.ts:974</li>
 						</ul>
@@ -146,7 +146,7 @@
 					<h3>name</h3>
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="_lib_d4c_.previouserror.html">PreviousError</a>.<a href="_lib_d4c_.previouserror.html#name">name</a></p>
+						<p>Inherited from <a href="_lib_d4c_.previoustaskerror.html">PreviousTaskError</a>.<a href="_lib_d4c_.previoustaskerror.html#name">name</a></p>
 						<ul>
 							<li>Defined in node_modules/typescript/lib/lib.es5.d.ts:973</li>
 						</ul>
@@ -157,7 +157,7 @@
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> stack</h3>
 					<div class="tsd-signature tsd-kind-icon">stack<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="_lib_d4c_.previouserror.html">PreviousError</a>.<a href="_lib_d4c_.previouserror.html#stack">stack</a></p>
+						<p>Inherited from <a href="_lib_d4c_.previoustaskerror.html">PreviousTaskError</a>.<a href="_lib_d4c_.previoustaskerror.html#stack">stack</a></p>
 						<ul>
 							<li>Defined in node_modules/typescript/lib/lib.es5.d.ts:975</li>
 						</ul>
@@ -187,35 +187,35 @@
 					<li class="current tsd-kind-module">
 						<a href="../modules/_lib_d4c_.html">&quot;lib/<wbr>D4C&quot;</a>
 					</li>
-					<li class=" tsd-kind-module">
-						<a href="../modules/_lib_queue_.html">&quot;lib/<wbr>Queue&quot;</a>
-					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-enum tsd-parent-kind-module">
+						<a href="../enums/_lib_d4c_.errmsg.html" class="tsd-kind-icon">Err<wbr>Msg</a>
+					</li>
 					<li class=" tsd-kind-class tsd-parent-kind-module">
 						<a href="_lib_d4c_.d4c.html" class="tsd-kind-icon">D4C</a>
 					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-class tsd-parent-kind-module">
-						<a href="_lib_d4c_.previouserror.html" class="tsd-kind-icon">Previous<wbr>Error</a>
+						<a href="_lib_d4c_.previoustaskerror.html" class="tsd-kind-icon">Previous<wbr>Task<wbr>Error</a>
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
-								<a href="_lib_d4c_.previouserror.html#constructor" class="tsd-kind-icon">constructor</a>
+								<a href="_lib_d4c_.previoustaskerror.html#constructor" class="tsd-kind-icon">constructor</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-								<a href="_lib_d4c_.previouserror.html#message" class="tsd-kind-icon">message</a>
+								<a href="_lib_d4c_.previoustaskerror.html#message" class="tsd-kind-icon">message</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-								<a href="_lib_d4c_.previouserror.html#name" class="tsd-kind-icon">name</a>
+								<a href="_lib_d4c_.previoustaskerror.html#name" class="tsd-kind-icon">name</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-inherited">
-								<a href="_lib_d4c_.previouserror.html#stack" class="tsd-kind-icon">stack</a>
+								<a href="_lib_d4c_.previoustaskerror.html#stack" class="tsd-kind-icon">stack</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-static">
-								<a href="_lib_d4c_.previouserror.html#error" class="tsd-kind-icon">Error</a>
+								<a href="_lib_d4c_.previoustaskerror.html#error" class="tsd-kind-icon">Error</a>
 							</li>
 						</ul>
 					</li>
@@ -223,9 +223,6 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_lib_d4c_.html#synchronized" class="tsd-kind-icon">synchronized</a>
-					</li>
-					<li class=" tsd-kind-object-literal tsd-parent-kind-module">
-						<a href="../modules/_lib_d4c_.html#errmsg" class="tsd-kind-icon">err<wbr>Msg</a>
 					</li>
 				</ul>
 			</nav>
@@ -238,12 +235,13 @@
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
-				<li class="tsd-kind-class tsd-has-type-parameter"><span class="tsd-kind-icon">Class with type parameter</span></li>
 				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
 			</ul>
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
+			</ul>
+			<ul class="tsd-legend">
+				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
 			</ul>
 			<ul class="tsd-legend">
 				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
