--- a/globals.html
+++ b/globals.html
@@ -70,7 +70,6 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_lib_d4c_.html" class="tsd-kind-icon">&quot;lib/<wbr>D4C&quot;</a></li>
-								<li class="tsd-kind-module"><a href="modules/_lib_queue_.html" class="tsd-kind-icon">&quot;lib/<wbr>Queue&quot;</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,9 +88,6 @@
 					<li class=" tsd-kind-module">
 						<a href="modules/_lib_d4c_.html">&quot;lib/<wbr>D4C&quot;</a>
 					</li>
-					<li class=" tsd-kind-module">
-						<a href="modules/_lib_queue_.html">&quot;lib/<wbr>Queue&quot;</a>
-					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
@@ -106,12 +102,13 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 			</ul>
 			<ul class="tsd-legend">
+				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
+			</ul>
+			<ul class="tsd-legend">
 				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
-				<li class="tsd-kind-class tsd-has-type-parameter"><span class="tsd-kind-icon">Class with type parameter</span></li>
 			</ul>
 		</div>
 	</div>
