--- a/enums/_lib_d4c_.errmsg.html
+++ b/enums/_lib_d4c_.errmsg.html
@@ -77,8 +77,8 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#instanceinvalidtag" class="tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidclassparameter" class="tsd-kind-icon">Invalid<wbr>Class<wbr>Parameter</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invaliddecoratoroption" class="tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidsetqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Concurrency</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidsetqueuetag" class="tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Tag</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#invalidqueuetag" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a></li>
 							</ul>
 						</section>
@@ -93,7 +93,7 @@
 					<div class="tsd-signature tsd-kind-icon">Instance<wbr>Invalid<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;instanceInvalidTag: it should be string/symbol/undefined&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L31">src/lib/D4C.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L31">src/lib/D4C.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -103,7 +103,7 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Class<wbr>Parameter<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidClassParameter&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L35">src/lib/D4C.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -113,27 +113,27 @@
 					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;not valid option when using decorators&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L32">src/lib/D4C.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L32">src/lib/D4C.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="invalidsetqueueconcurrency" class="tsd-anchor"></a>
-					<h3>Invalid<wbr>Set<wbr>Queue<wbr>Concurrency</h3>
-					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Concurrency<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidSetQueueConcurrency&quot;</span></div>
+					<a name="invalidqueueconcurrency" class="tsd-anchor"></a>
+					<h3>Invalid<wbr>Queue<wbr>Concurrency</h3>
+					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueConcurrency&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L33">src/lib/D4C.ts:33</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L33">src/lib/D4C.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="invalidsetqueuetag" class="tsd-anchor"></a>
-					<h3>Invalid<wbr>Set<wbr>Queue<wbr>Tag</h3>
-					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidSetQueueTag&quot;</span></div>
+					<a name="invalidqueuetag" class="tsd-anchor"></a>
+					<h3>Invalid<wbr>Queue<wbr>Tag</h3>
+					<div class="tsd-signature tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;invalidQueueTag&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L34">src/lib/D4C.ts:34</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L34">src/lib/D4C.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -143,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;missingThisDueBindIssue&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/eecd943/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/grimmer0125/c4q/blob/186e1dc/src/lib/D4C.ts#L36">src/lib/D4C.ts:36</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -180,10 +180,10 @@
 								<a href="_lib_d4c_.errmsg.html#invaliddecoratoroption" class="tsd-kind-icon">Invalid<wbr>Decorator<wbr>Option</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_lib_d4c_.errmsg.html#invalidsetqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Concurrency</a>
+								<a href="_lib_d4c_.errmsg.html#invalidqueueconcurrency" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Concurrency</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="_lib_d4c_.errmsg.html#invalidsetqueuetag" class="tsd-kind-icon">Invalid<wbr>Set<wbr>Queue<wbr>Tag</a>
+								<a href="_lib_d4c_.errmsg.html#invalidqueuetag" class="tsd-kind-icon">Invalid<wbr>Queue<wbr>Tag</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_lib_d4c_.errmsg.html#missingthisduebindissue" class="tsd-kind-icon">Missing<wbr>This<wbr>Due<wbr>Bind<wbr>Issue</a>
